# leilao_pub_sub

./: README.md  compose.yaml  pyproject.toml
leilao_pub/: main.py  publisher.py
leilao_sub/: consumer.py
